--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,24 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+ 
+DB_HOST_CUSTOMER=127.0.0.1
+DB_PORT_CUSTOMER=3306
+DB_DATABASE_CUSTOMER=laravel
+DB_USERNAME_CUSTOMER=root
+DB_PASSWORD_CUSTOMER=
+ 
+DB_HOST_CASHIER=127.0.0.1
+DB_PORT_CASHIER=3306
+DB_DATABASE_CASHIER=laravel
+DB_USERNAME_CASHIER=root
+DB_PASSWORD_CASHIER=
+ 
+DB_HOST_OWNER=127.0.0.1
+DB_PORT_OWNER=3306
+DB_DATABASE_OWNER=laravel
+DB_USERNAME_OWNER=root
+DB_PASSWORD_OWNER=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,6 +60,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
